[metadata]
name = hacking
author = OpenStack
author-email = openstack-dev@lists.openstack.org
summary = OpenStack Hacking Guideline Enforcement
description-file =
    README.rst
home-page = http://github.com/openstack-dev/hacking
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    hacking

[entry_points]
flake8.extension =
    H000 = hacking.core:ProxyChecks
    H101 = hacking.checks.comments:hacking_todo_format
    H102 = hacking.checks.comments:hacking_has_license
    H103 = hacking.checks.comments:hacking_has_correct_license
    H104 = hacking.checks.comments:hacking_has_only_comments
    H201 = hacking.checks.except_checks:hacking_except_format
    H202 = hacking.checks.except_checks:hacking_except_format_assert
    H231 = hacking.checks.python23:hacking_python3x_except_compatible
    H232 = hacking.checks.python23:hacking_python3x_octal_literals
    H233 = hacking.checks.python23:hacking_python3x_print_function
    H234 = hacking.checks.python23:hacking_no_assert_equals
    H235 = hacking.checks.python23:hacking_no_assert_underscore
    H236 = hacking.checks.python23:hacking_python3x_metaclass
    H237 = hacking.checks.python23:hacking_no_removed_module
    H301 = hacking.checks.imports:hacking_import_rules
    H305 = hacking.checks.imports:hacking_import_groups
    H306 = hacking.checks.imports:hacking_import_alphabetical
    H307 = hacking.checks.imports:hacking_import_groups_together
    H401 = hacking.checks.docstrings:hacking_docstring_start_space
    H402 = hacking.checks.docstrings:hacking_docstring_one_line
    H403 = hacking.checks.docstrings:hacking_docstring_multiline_end
    H404 = hacking.checks.docstrings:hacking_docstring_multiline_start
    H405 = hacking.checks.docstrings:hacking_docstring_summary
    H501 = hacking.core:hacking_no_locals
    H700 = hacking.core:hacking_localization_strings
    H801 = hacking.core:OnceGitCheckCommitTitleBug
    H802 = hacking.core:OnceGitCheckCommitTitleLength
    H803 = hacking.core:OnceGitCheckCommitTitlePeriodEnding
    H901 = hacking.core:hacking_is_not
    H902 = hacking.core:hacking_not_in
    H903 = hacking.core:hacking_no_cr
    H904 = hacking.core:hacking_no_backslash_line_continuation

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
