[metadata]
name = hacking
author = OpenStack
author-email = openstack-dev@lists.openstack.org
summary = OpenStack Hacking Guideline Enforcement
description-file =
    README.rst
home-page = http://docs.openstack.org/developer/hacking/
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    hacking

[entry_points]
flake8.extension =
    H000 = hacking.core:ProxyChecks
    H101 = hacking.checks.comments:hacking_todo_format
    H102 = hacking.checks.comments:hacking_has_license
    H103 = hacking.checks.comments:hacking_has_correct_license
    H104 = hacking.checks.comments:hacking_has_only_comments
    H105 = hacking.checks.comments:hacking_no_author_tags
    H106 = hacking.checks.vim_check:no_vim_headers
    H201 = hacking.checks.except_checks:hacking_except_format
    H202 = hacking.checks.except_checks:hacking_except_format_assert
    H231 = hacking.checks.python23:hacking_python3x_except_compatible
    H232 = hacking.checks.python23:hacking_python3x_octal_literals
    H233 = hacking.checks.python23:hacking_python3x_print_function
    H234 = hacking.checks.python23:hacking_no_assert_equals
    H235 = hacking.checks.python23:hacking_no_assert_underscore
    H236 = hacking.checks.python23:hacking_python3x_metaclass
    H237 = hacking.checks.python23:hacking_no_removed_module
    H238 = hacking.checks.python23:hacking_no_old_style_class
    H301 = hacking.checks.imports:hacking_import_rules
    H306 = hacking.checks.imports:hacking_import_alphabetical
    H401 = hacking.checks.docstrings:hacking_docstring_start_space
    H403 = hacking.checks.docstrings:hacking_docstring_multiline_end
    H404 = hacking.checks.docstrings:hacking_docstring_multiline_start
    H405 = hacking.checks.docstrings:hacking_docstring_summary
    H501 = hacking.checks.dictlist:hacking_no_locals
    H700 = hacking.checks.localization:hacking_localization_strings
    H903 = hacking.checks.other:hacking_no_cr

[extras]
pep257 =
  flake8-docstrings==0.2.1.post1 # MIT

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source


[pbr]
warnerrors = True

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1
