[metadata]
name = hacking
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
summary = OpenStack Hacking Guideline Enforcement
description-file =
    README.rst
home-page = https://docs.openstack.org/hacking/latest/
python-requires = >=3.5
project_urls =
  Bug Tracker = https://bugs.launchpad.net/hacking
  Reviews = https://review.opendev.org/q/p:openstack/hacking+status:open
  CI = https://zuul.opendev.org/t/openstack/builds?project=openstack%%2Fhacking
  Source Code = https://opendev.org/openstack/hacking
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[files]
packages =
    hacking

[entry_points]
flake8.extension =
    H101 = hacking.checks.comments:hacking_todo_format
    H102 = hacking.checks.comments:hacking_has_license
    H103 = hacking.checks.comments:hacking_has_correct_license
    H104 = hacking.checks.comments:hacking_has_only_comments
    H105 = hacking.checks.comments:hacking_no_author_tags
    H106 = hacking.checks.vim_check:no_vim_headers
    H201 = hacking.checks.except_checks:hacking_except_format
    H202 = hacking.checks.except_checks:hacking_except_format_assert
    H203 = hacking.checks.except_checks:hacking_assert_is_none
    H204 = hacking.checks.except_checks:hacking_assert_equal
    H205 = hacking.checks.except_checks:hacking_assert_greater_less
    H210 = hacking.checks.mock_checks:MockAutospecCheck
    H211 = hacking.checks.except_checks:hacking_assert_true_instance
    H212 = hacking.checks.except_checks:hacking_assert_equal_type
    H213 = hacking.checks.except_checks:hacking_assert_raises_regexp
    H214 = hacking.checks.except_checks:hacking_assert_true_or_false_with_in
    H215 = hacking.checks.except_checks:hacking_assert_equal_in
    H216 = hacking.checks.mock_checks:hacking_no_third_party_mock
    H231 = hacking.checks.python23:hacking_python3x_except_compatible
    H232 = hacking.checks.python23:hacking_python3x_octal_literals
    H233 = hacking.checks.python23:hacking_python3x_print_function
    H234 = hacking.checks.python23:hacking_no_assert_equals
    H235 = hacking.checks.python23:hacking_no_assert_underscore
    H236 = hacking.checks.python23:hacking_python3x_metaclass
    H237 = hacking.checks.python23:hacking_no_removed_module
    H238 = hacking.checks.python23:hacking_no_old_style_class
    H301 = hacking.checks.imports:hacking_import_rules
    H306 = hacking.checks.imports:hacking_import_alphabetical
    H401 = hacking.checks.docstrings:hacking_docstring_start_space
    H403 = hacking.checks.docstrings:hacking_docstring_multiline_end
    H404 = hacking.checks.docstrings:hacking_docstring_multiline_start
    H405 = hacking.checks.docstrings:hacking_docstring_summary
    H501 = hacking.checks.dictlist:hacking_no_locals
    H700 = hacking.checks.localization:hacking_localization_strings
    H903 = hacking.checks.other:hacking_no_cr
    H904 = hacking.checks.other:hacking_delayed_string_interpolation

[extras]
pep257 =
  flake8-docstrings==0.2.1.post1 # MIT

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
